k8s/clinic-db/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-clinic
spec:
  serviceName: "service-db-clinic"
  replicas: 1
  selector:
    matchLabels:
      app: clinic-db-selector
  template:
    metadata:
      labels:
        app: clinic-db-selector
    spec:
      containers:
        - name: postgres-clinic
          image: postgres:17-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: clinic-db
      volumes:
        - name: clinic-db
          persistentVolumeClaim:
            claimName: clinic-pvc
