k8s/clinic-db/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-db-clinic
spec:
  selector:
    app: clinic-db-selector
  ports:
    - targetPort: 5432
      port: 5432
  type: ClusterIP
