k8s/clinic-db/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clinic-api
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: clinic-app.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-clinic
                port:
                  number: 80
